<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="44dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigo"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="82dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Observaciones"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="122dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="198dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/raza"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="237dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="273dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="316dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Peso"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="352dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="390dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="447dp"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>