<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="UnusedAttribute"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:gravity="center"
        android:text="@string/Texto"
        android:textSize="50dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        android:textColor="@color/orange"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Texto1"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="181dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Texto2"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="325dp"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>